-DB changes for FormTypes set set default values as false -View GisRecords Files modified - [MasterFormsController.java,cx2_published_dataModel.json,UsersController.java,servicedef.xml,EditForm.html,Forms.variables.json,GisrecordsController.java,EditForm.variables.json,Forms.html,Forms.js,db-connection-settings.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -134,12 +134,12 @@
                                                                 <wm-form-field name="gismap" displayname="GIS Map" show="true" primary-key="false" generator="assigned" key="gismap" type="boolean" widget="checkbox"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn62_3">
-                                                                <wm-form-field name="gisrecord" displayname="Single GIS Record" show="true" primary-key="false" generator="assigned" key="gisrecord" type="boolean" widget="checkbox" defaultvalue="bind:!(Widgets.liveformUpdateFormType.formWidgets.multipleGisrecords.datavalue)"></wm-form-field>
+                                                                <wm-form-field name="gisrecord" displayname="Single GIS Record" show="true" primary-key="false" generator="assigned" key="gisrecord" type="boolean" widget="checkbox"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow40">
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn63_2">
-                                                                <wm-form-field name="multipleGisrecords" displayname="Multiple GIS Records" show="true" primary-key="false" generator="assigned" key="multipleGisrecords" type="boolean" widget="checkbox" defaultvalue="bind:!(Widgets.liveformUpdateFormType.formWidgets.gisrecord.datavalue)"></wm-form-field>
+                                                                <wm-form-field name="multipleGisrecords" displayname="Multiple GIS Records" show="true" primary-key="false" generator="assigned" key="multipleGisrecords" type="boolean" widget="checkbox"></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn64_2"></wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn65"></wm-gridcolumn>
