--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -57,7 +57,7 @@
                                     </wm-layoutgrid>
                                     <wm-form-field name="approvedBy" displayname="Approved By" show="false" primary-key="false" generator="assigned" key="approvedBy" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentUserDetails.dataSet.email"
                                     inputtype="text" placeholder="Enter value"></wm-form-field>
-                                    <wm-form-field name="dateApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
+                                    <wm-form-field name="datePApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
                                     outputformat="yyyy-MM-dd" showbuttonbar="false" datepattern="yyyy-MM-dd"></wm-form-field>
                                     <wm-form-field name="vendor" displayname="Vendor" show="false" primary-key="false" generator="assigned" key="vendor" type="list" is-related="true" widget="select" placeholder="Select value"></wm-form-field>
                                     <wm-form-field name="municipalities" displayname="Municipalities" show="false" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" widget="select" placeholder="Select value"></wm-form-field>
@@ -112,7 +112,7 @@
                                         </wm-gridrow>
                                         <wm-gridrow name="gridrow2">
                                             <wm-gridcolumn name="gridcolumn2" columnwidth="12">
-                                                <wm-form-field name="dateApproved" displayname="Date Approved" show="true" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
+                                                <wm-form-field name="dateAApproved" displayname="Date Approved" show="true" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" defaultvalue="CURRENT_DATE" placeholder="Select date"
                                                 outputformat="yyyy-MM-dd"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -155,7 +155,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                     <wm-form-field name="expiresDate" displayname="Expires Date" show="false" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd" mindate="bind:toDay | toDate: 'yyyy-MM-dd'"></wm-form-field>
-                                    <wm-form-field name="dateApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" outputformat="yyyy-MM-dd" placeholder="Select date"
+                                    <wm-form-field name="dateSApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" outputformat="yyyy-MM-dd" placeholder="Select date"
                                     defaultvalue="CURRENT_DATE"></wm-form-field>
                                     <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
                                     placeholder=""></wm-form-field>
